--- a/.github/workflows/auto_build_docker_container.yml
+++ b/.github/workflows/auto_build_docker_container.yml
@@ -1,10 +1,10 @@
 name: 自动构建docker镜像
 
 on:
-  schedule:
-    - cron: "21 19 * * 0"
-  watch:
-    types: started
+#  schedule:
+#    - cron: "21 19 * * 0"
+#  watch:
+#    types: started
   workflow_dispatch:
 
 #  push:
