--- a/.github/workflows/auto_build_docker_container.yml
+++ b/.github/workflows/auto_build_docker_container.yml
@@ -70,7 +70,7 @@ jobs:
           context: ./dockerfile/
           file: ./dockerfile/Dockerfile
           push: true
-          platforms: linux/amd64,linux/arm64,linux/arm
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
       - name: all Image digest
