--- a/.github/workflows/auto_build_docker_container.yml
+++ b/.github/workflows/auto_build_docker_container.yml
@@ -73,7 +73,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
       - name: all Image digest
