update github actions
Signed-off-by: niliovo <1791356563@qq.com>

--- a/.github/workflows/auto_build_docker_container.yml
+++ b/.github/workflows/auto_build_docker_container.yml
@@ -3,8 +3,8 @@ name: 自动构建docker镜像
 on:
   schedule:
     - cron: "36 18 * * 0"
-  #watch:
-  #  types: started
+  watch:
+    types: started
 #  workflow_dispatch:
 
   push:
